# serigraph

./: CMakeLists.txt  README.md
src/: color_lut.cpp  color_lut.hpp  ink_layer.cpp  ink_layer.hpp  main.cpp  main_window.cpp  main_window.h  palette_widget.cpp  palette_widget.hpp  serigraph.cpp  serigraph.hpp  serigraph_widget.cpp  serigraph_widget.h
